--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -12,7 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="40sp"
-            android:textColor="#FFFFF"
+            android:textColor="#FFFFFF"
             android:text="두번째 프래그먼트"/>
 
     </LinearLayout>
