비번 입력 화면  - strings.xml 활용  - 힌트컬러도 별도로 설정 (color.xml 활용)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="lightText">#FFFFFF</color>
     <color name="yello">#FFBB2F</color>
+    <color name="lightHint">#808080</color>
 </resources>
