--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -24,7 +24,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
-            android:hint="ID" />
+            android:hint="ID"
+            android:textColorHint="@color/lightHint"/>
 
         <EditText
             android:id="@+id/loginPwEdt"
@@ -32,7 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="Password" />
+            android:hint="@string/pw_input_hint"
+            android:textColorHint="@color/lightHint"/>
 
         <Button
             android:id="@+id/loginBtn"
